fixed alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,14 +67,15 @@ body {
 
 
 #main {
-    display:flex;
+    display:grid;
+    grid-template-columns: 25% 50% 25%;
+    grid-template-rows: 100%;
     height: 100%;
 }
 
 #left-container {
     display: flex;
     flex-direction: column-reverse;
-    width:25%;
     padding:10px;
     margin-right: 20px;
     border-radius: 10px;
@@ -110,7 +111,6 @@ body {
 
 
 #mid-container {
-    width: 50%;
 
 }
 
@@ -120,7 +120,7 @@ body {
     grid-template-rows: 100%;
     height: 170px;
     margin-bottom: 10px;
-    width: 900px;
+    width: 950px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 
@@ -174,6 +174,11 @@ body {
             border-right: 1px solid black;
         }
 
+
+#right-container {
+    margin-left: 20px;
+}
+
 .chat-text {
     width: 97%;
     min-height: 60px;
@@ -203,10 +208,6 @@ body {
     max-height: 35px;
 }
 
-#right-container {
-    width:25%;
-    margin-left: 20px;
-}
 
 
 #stats-container {
@@ -217,7 +218,7 @@ body {
 }
 
 #footer {
-    width: 900px;
+    width: 950px;
     height: 30px;
     margin-top: 10px;
     text-align: center;
